--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/compiled/cljs_live.js" type="text/javascript"></script>
+    <script src="js/compiled/cljs_live_eval.js" type="text/javascript"></script>
   </body>
 </html>
